chore : 코드 스멜 수정